# Education-Virtual-File-System

./: .gitignore  AUTO_ASSIGNMENT.md  AUTO_ASSIGNMENT_IMPLEMENTATION.md  CLI_IMPROVEMENTS.md  CMakeLists.txt  DEMO_INSTRUCTIONS.md  DEMO_SCRIPT.md  DEMO_SCRIPT_WITH_LISTS.md  FEATURE_IMPROVEMENTS_PLAN.md  FILESYSTEM_DEMO_GUIDE.md  FINAL_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LIST_FEATURE_QUICK_IMPLEMENTATION.md  LIST_FEATURE_USAGE.md  QUICK_START_AUTO_ASSIGNMENT.md  QUICK_START_IMPROVED_CLI.md  README.md  STRUCTURED_REVIEW_IMPL.cpp  STRUCTURED_REVIEW_PROGRESS.md  STRUCTURED_REVIEW_TESTING_GUIDE.md  cleanup_admin_assignments.sh  compile.sh  demo_auto_assignment.sh  demo_filesystem_features.sh  demo_improved_cli.sh  quick_test.sh  run_gui.sh  test_auto_assignment.md  test_decision_update.sh
.cursor/plans/: 审稿与vfs特性方案_74a4b199.plan.md
docs/: FS_LAYOUT.md  INODE_IMPLEMENTATION.md  INTERFACES.md  PROTOCOL.md
include/client/: review_client.h
include/common/: protocol.h
include/filesystem/: bitmap.h  lru_cache.h  vfs.h  vfs_types.h
include/gui/: author_widget.h  login_widget.h  main_window.h
include/server/: assignment_service.h  auth_manager.h  review_data.h  review_server.h
src/client/: CMakeLists.txt  client_main.cpp  review_client.cpp
src/common/: CMakeLists.txt  protocol.cpp
src/filesystem/: CMakeLists.txt  bitmap.cpp  lru_cache.cpp  vfs.cpp  vfs_file_ops.cpp  vfs_io.cpp
src/gui/: CMakeLists.txt  author_widget.cpp  login_widget.cpp  main.cpp  main_window.cpp
src/server/: CMakeLists.txt  assignment_service.cpp  auth_manager.cpp  review_server.cpp  server_main.cpp
src/tests/: CMakeLists.txt  test_vfs.cpp
src/tools/: CMakeLists.txt  fs_demo.cpp
vfs/include/: block_device.h  vfs.h
vfs/src/: mem_block_device.cc  vfs.cc
vfs/tests/: test_vfs.cc
